perf: 优化波形生成性能 (~38x 提升)
- 为 symphonia 库在 dev 模式下启用 opt-level=3 编译优化
- 简化声道处理，只使用第一声道而非平均所有声道
- 移除进度回调中的 thread::sleep 调用
- 预分配 Vec 容量减少内存重分配
- 使用时间节流优化进度回调频率

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,9 +34,23 @@ tokio = { version = "1", features = ["rt", "sync", "time"] }
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
 
+# Optimize symphonia in dev mode for faster audio processing
+[profile.dev.package.symphonia]
+opt-level = 3
+[profile.dev.package.symphonia-core]
+opt-level = 3
+[profile.dev.package.symphonia-bundle-mp3]
+opt-level = 3
+[profile.dev.package.symphonia-codec-aac]
+opt-level = 3
+[profile.dev.package.symphonia-codec-vorbis]
+opt-level = 3
+[profile.dev.package.symphonia-format-ogg]
+opt-level = 3
+
 [profile.release]
 codegen-units = 1 # Allows LLVM to perform better optimization.
 lto = true        # Enables link-time-optimizations.
-opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
+opt-level = 3     # Prioritizes speed over binary size.
 panic = "abort"   # Higher performance by disabling panic handlers.
 strip = true      # Ensures debug symbols are removed.
