--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,19 @@ jobs:
           args: ${{ matrix.args }}
           tagName: ${{ github.ref_name }}
           releaseName: 'VoSub ${{ github.ref_name }}'
-          releaseBody: '请在下方下载对应平台的安装包。'
+          releaseBody: |
+            请在下方下载对应平台的安装包。
+
+            ## macOS 安装说明
+
+            由于应用未经 Apple 签名，安装后需要执行以下步骤：
+
+            1. 打开 DMG 文件，将 VoSub.app 拖拽到 Applications 文件夹
+            2. 打开终端，执行以下命令移除隔离属性：
+               ```
+               xattr -cr '/Applications/VoSub.app'
+               ```
+            3. 完成后即可正常启动 VoSub
           releaseDraft: false
           prerelease: false
 
