--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,8 +73,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: ${{ matrix.args }}
-          tagName: ${{ github.ref_name }}
-          releaseName: 'VoSub ${{ github.ref_name }}'
+          # 只在 tag 推送时创建 Release
+          tagName: ${{ startsWith(github.ref, 'refs/tags/v') && github.ref_name || '' }}
+          releaseName: ${{ startsWith(github.ref, 'refs/tags/v') && format('VoSub {0}', github.ref_name) || '' }}
           releaseBody: |
             请在下方下载对应平台的安装包。
 
