--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,6 +33,7 @@ tokio = { version = "1", features = ["rt", "sync", "time"] }
 dirs = "5.0"
 hound = "3.5"
 reqwest = { version = "0.12", features = ["stream"] }
+futures-util = "0.3"
 once_cell = "1.19"
 
 [profile.dev]
