--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-http": "^2.5.4",
     "@tauri-apps/plugin-log": "^2.7.1",
     "@tauri-apps/plugin-shell": "^2.3.3",
     "@types/howler": "^2.2.12",
