feat: 添加新手引导功能
- 欢迎页：首次进入显示引导卡片（2步介绍核心入口）
- 编辑器：首次进入自动启动功能引导（根据是否有音频动态调整）
- 设置：添加「重新查看引导」选项
- 使用 Driver.js 实现编辑器引导
- 引导文字禁止选中

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/howler": "^2.2.12",
     "@vue/devtools": "^8.0.3",
     "@vueuse/core": "^14.0.0",
+    "driver.js": "^1.4.0",
     "element-plus": "^2.11.8",
     "howler": "^2.2.4",
     "pinia": "^3.0.3",
